--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,14 @@
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             </dependency>
+        <dependency>
+        	<groupId>com.fasterxml.jackson.module</groupId>
+        	<artifactId>jackson-module-afterburner</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>com.fasterxml.jackson.module</groupId>
+        	<artifactId>jackson-module-mrbean</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
